<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="20dp"
    tools:context="com.example.evian.a4.LoadQuestion5">

    <TextView
        android:id="@+id/nameSemi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignBaseline="@id/logout"
        android:textSize="18sp"
        android:text="@string/nameSemi"
        tools:ignore="RelativeOverlap"
        />

    <TextView
        android:id="@+id/displayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/nameSemi"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/logout"
        tools:ignore="RelativeOverlap"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/logout"
        tools:ignore="RelativeOverlap"
        android:onClick="logout"
        android:textAllCaps="false"
        />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameSemi"
        android:layout_marginTop="40dp"
        android:textSize="16sp"
        android:text="@string/question5"/>

    <ImageView
        android:id="@+id/question5Image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/question"
        android:layout_marginTop="20dp"
        android:maxHeight="80dp"
        android:maxWidth="160dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/image5"
        android:contentDescription="@string/flag5"
        />

    <CheckBox
        android:id="@+id/checkboxCanada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/canada"
        android:layout_below="@id/question5Image"
        android:layout_marginTop="20dp"
        android:onClick="onCheckBoxClicked"
        />
    <CheckBox
        android:id="@+id/checkboxTaiwan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taiwan"
        android:layout_below="@id/checkboxCanada"
        android:onClick="onCheckBoxClicked"
        />
    <CheckBox
        android:id="@+id/checkboxSouthAfrica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/southafrica"
        android:layout_below="@id/checkboxTaiwan"
        android:onClick="onCheckBoxClicked"
        />
    <CheckBox
        android:id="@+id/checkboxUK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uk"
        android:layout_below="@id/checkboxSouthAfrica"
        android:onClick="onCheckBoxClicked"
        />
    <Button
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/previous"
        android:textAllCaps="false"
        android:onClick="goPreviousPage"/>

    <TextView
        android:id="@+id/index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="18sp" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/next"
        tools:ignore="RelativeOverlap"
        android:onClick="goNextPage"
        android:textAllCaps="false"/>

</RelativeLayout>