<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="20dp"
    tools:context="com.example.evian.a4.Finishpage">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignBaseline="@id/logout"
        android:textSize="18sp"
        android:text="@string/welcome"
        tools:ignore="RelativeOverlap"
        />

    <TextView
        android:id="@+id/displayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/welcome"
        android:layout_alignBaseline="@+id/logout"
        android:textSize="18sp"
        tools:ignore="RelativeOverlap"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/logout"
        tools:ignore="RelativeOverlap"
        android:onClick="logout"
        android:textAllCaps="false"
        />

    <TextView
        android:id="@+id/displayScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/topicSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/topicSelect"
        android:onClick="goTopicSelect"
        android:textAllCaps="false"
        />

</RelativeLayout>