<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.evian.a4.Welcomepage">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignBaseline="@+id/name"
        android:layout_alignBottom="@+id/name"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"
        android:labelFor="@+id/name"
        android:textSize="20sp"
        android:text="@string/Name"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/textViewName"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:ems="12"
        android:inputType="textPersonName"
        >


    </EditText>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@+id/copyright"
        android:layout_alignBottom="@+id/copyright"
        android:onClick="goNextPage"
        android:text="@string/next"
        android:layout_marginEnd="10dp"
        tools:ignore="RelativeOverlap"
        android:textAllCaps="false"
        />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/copyright"/>


</RelativeLayout>
